--- a/IU.ipynb
+++ b/IU.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IU Portfolio, The Nigerian Inflation\n",
+    "Data Source: [World Bank](https://data.worldbank.org/country/NG)\n",
     "\n"
+  
    ]
   },
   {
