--- a/EDA-Nigeria.ipynb
+++ b/EDA-Nigeria.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Data Source: [World Bank](https://data.worldbank.org/country/NG)\n"
+   ]
   },
   {
    "cell_type": "code",
