--- a/EDA-Nigeria.ipynb
+++ b/EDA-Nigeria.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Source"
+    "Data Source: [World Bank](https://data.worldbank.org/country/NG)\n"
    ]
   },
   {
