--- a/EDA-Nigeria.ipynb
+++ b/EDA-Nigeria.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the head function with 10 as parameter to display only values from the whole dataset\n"
+    "### Using the head function with 10 as parameter to display only 10 values from the whole dataset\n"
    ]
   },
   {
