--- a/EDA-Nigeria.ipynb
+++ b/EDA-Nigeria.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Nigeria Economic Data"
     "Data Source: [World Bank](https://data.worldbank.org/country/NG)"
    ]
   },
